--- a/pages/layout-news.html
+++ b/pages/layout-news.html
@@ -23,12 +23,8 @@
         color: #555;
         text-decoration: none;
       }
-      .columns {
-        display: flex;
-      }
       .column {
         flex: 1;
-        display: flex;
         flex-direction: column;
       }
       .main-column {
@@ -62,6 +58,9 @@
       .article-image.is-16by9 {
         padding-top: 56.25%;
       }
+      .article-image.is-3by2 {
+        padding-top: 66.666%;
+      }
       .article-image img {
         position: absolute;
         width: 100%;
@@ -79,6 +78,13 @@
         display: flex;
         justify-content: space-between;
         font-size: 0.85em;
+      }
+
+      @media screen and (min-width: 800px) {
+        .columns,
+        .column {
+          display: flex;
+        }
       }
     </style>
   </head>
