--- a/pages/news.html
+++ b/pages/news.html
@@ -114,7 +114,7 @@
           </figure>
           <div class="article-body">
             <h2 class="article-title">
-              Hello World
+              Hello World 2
             </h2>
             <p class="article-content">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor
