--- a/pages/striped-slider.html
+++ b/pages/striped-slider.html
@@ -99,7 +99,7 @@
         <div class="overlay">
           <div class="overlay-inner">
             <h2>Title #1</h2>
-            <p>Fusce vulputate orci at nulla consequat, ac tincidunt quam ultrices.</p>
+            <p>Fusce vulputate orci at nulla consequat, ac tincidunt quam ultrices1.</p>
           </div>
         </div>
       </a>
